<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.case_landing.CaseLandingFragment">

    <LinearLayout
        android:id="@+id/case_landing_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/case_handling_output"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/case_details_output"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/case_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:drawableStart="@drawable/ic_assignment_black_24dp"
                    android:text="@string/case_number_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/examiner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/examiner_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/notes_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/location_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/created"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/timestamp_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/edit_case_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorAccent"
                    android:capitalize="none"
                    android:text="@string/nav_edit_case"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/view_evidence_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorAccent"
                    android:capitalize="none"
                    android:text="@string/nav_view_evidence"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/case_evidence_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/add_initial_screen_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_initial_screen_button"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center|clip_vertical"
                        android:background="@color/colorAccent"
                        android:drawableTop="@drawable/ic_camera_enhance_black_24dp" />

                    <TextView
                        android:id="@+id/add_initial_screen_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/nav_initial_screen"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_tool_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_tool_button"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:drawableTop="@drawable/ic_camera_enhance_black_24dp" />

                    <TextView
                        android:id="@+id/add_tool_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/nav_tool"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_hardware_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_hardware_button"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:drawableTop="@drawable/ic_camera_enhance_black_24dp" />

                    <TextView
                        android:id="@+id/add_hardware_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/nav_add_hardware"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_manual_extraction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_manual_extraction_button"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:drawableTop="@drawable/ic_camera_enhance_black_24dp" />

                    <TextView
                        android:id="@+id/add_manual_extraction_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/nav_add_manual_extraction"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_id_button"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:drawableTop="@drawable/ic_scanner_black_24dp" />

                    <TextView
                        android:id="@+id/add_id_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/nav_scan_id"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_text_files"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_text_files_button"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:drawableTop="@drawable/ic_scanner_black_24dp" />

                    <TextView
                        android:id="@+id/add_text_files_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/nav_scan_text"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>