<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateFragment">

    <LinearLayout
        android:id="@+id/create_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/case_number_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/case_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/case_number_text" />

            <EditText
                android:id="@+id/case_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/case_number_text"
                android:inputType="textAutoComplete" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/examiner_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/examiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/examiner_text" />

            <EditText
                android:id="@+id/examiner_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/examiner_text"
                android:inputType="textAutoComplete" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/location_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_text" />

            <EditText
                android:id="@+id/location_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/location_text"
                android:inputType="textAutoComplete" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notes_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes_text" />

            <EditText
                android:id="@+id/notes_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/notes_text"
                android:inputType="textAutoComplete|textImeMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/submit_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timestamp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/create_case_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"
                android:capitalize="none"
                android:drawableStart="@drawable/ic_add_black_24dp"
                android:paddingLeft="20dp"
                android:text="@string/nav_create_case"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>